created omp tryscript

--- a/note.ipynb
+++ b/note.ipynb
@@ -200,6 +200,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\r\n",
+    "x = np.linspace(0,5,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.],\n",
+       "       [1.],\n",
+       "       [2.],\n",
+       "       [3.],\n",
+       "       [4.],\n",
+       "       [5.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y=x.reshape(6,1)\r\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [1., 1.],\n",
+       "       [2., 2.],\n",
+       "       [3., 3.],\n",
+       "       [4., 4.],\n",
+       "       [5., 5.]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z=np.hstack((y,x.reshape(6,1)))\r\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
